quorum/test/tests/TypeChecker/Pass/ImpAssignTextTextObjWrapped.quorum
class main
    action main
        Text t
        t:SetValue("t")
        text txt = t
    end
end