quorum/test/tests/TypeChecker/Fail/ImpAssignTextObjBoolObjWrapped.quorum
class main
    action main
        Boolean bool
        bool:setValue(true)
        Text t = bool
    end
end